# A-White-Box-Graph-Subspace-Ridge-Classifier-with-Node-Level-Signal-Atlases

./: README.md
WG_SRC_iteration_record_迭代路径/01_MCR2_layerwise_geometric_tracing/: 00_STAGE_SUMMARY.md
WG_SRC_iteration_record_迭代路径/04_L_series_repairs_of_whitebox_GNN_route/: 00_STAGE_SUMMARY.md  99_ORIGINAL_SOURCE_PATHS.md
WG_SRC_iteration_record_迭代路径/05_src_v1_layered_closed_form_whitebox_pipeline/: 00_STAGE_SUMMARY.md  99_ORIGINAL_SOURCE_PATHS.md
WG_SRC_iteration_record_迭代路径/05b_src_v3_to_src_v6_WhiteBox_GSD_pipeline_Layer3_coupling_and_packaging/: 00_STAGE_SUMMARY.md
WG_SRC_iteration_record_迭代路径/05b_src_v3_to_src_v6_WhiteBox_GSD_pipeline_Layer3_coupling_and_packaging/01_algorithm_code/src_v6/: README.md  __init__.py  model.py  pyproject.toml
WG_SRC_iteration_record_迭代路径/07_v8_error_node_and_parameter_effect_audit/: 00_STAGE_SUMMARY.md  99_ORIGINAL_SOURCE_PATHS.md
WG_SRC_iteration_record_迭代路径/09_src_v10_safe_adaptive_branch_fixed_broken_redirect_audit/: 00_STAGE_SUMMARY.md  99_ORIGINAL_SOURCE_PATHS.md
WG_SRC_iteration_record_迭代路径/14_src_v16c_FINAL_enhanced_multihop_Fisher_PCA_multi_alpha_Ridge/: 00_STAGE_SUMMARY.md  99_ORIGINAL_SOURCE_PATHS.md
WG_SRC_iteration_record_迭代路径/15_rejected_after_v16c_v16d_v16e_v16f_v16g_v17/: 00_STAGE_SUMMARY.md  99_ORIGINAL_SOURCE_PATHS.md
reproducibility/configs/: paper_datasets.json
reproducibility/environment/: full_pip_freeze.txt  important_python_package_versions.txt  pip_version.txt  python_version.txt  where_python.txt
reproducibility/logs/: README_REPRODUCE_from_submission_package.txt  main_table_run_config.json
(+225 files in other folders)
